# rnns

./: .gitignore  README.md  data_preprocessing.ipynb  helpers.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  rnn.py
assets/embeddings/: .gitignore  rules
hopfield/: helpers.py  hopfield.py
lstm/: lstm.py  train.py
rnn/: rnn.py  train.py
scripts/: plots.py  preprocessing.py
